# Steam-Theme-Studio

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  install.bat  install.sh
backend/: .env  .env.example  pyproject.toml  steampack.db
backend/src/: config.py  database.py  main.py  models.py  schemas.py  websocket.py
backend/src/crud/: __init__.py  files.py  themes.py
backend/src/millennium/: __init__.py  core.py  preview.py  theme.py  vdf_parser.py
backend/src/routes/: __init__.py  files.py  health.py  millennium.py  themes.py
backend/tests/: test_millennium.py
frontend/: .env  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  config.ts  env.d.ts  main.tsx
frontend/src/components/: Layout.tsx  ThemeList.tsx
frontend/src/components/Editor/: CSSEditor.tsx  PreviewControl.tsx
frontend/src/components/Layout/: Navbar.tsx  Sidebar.tsx  index.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: useTheme.ts  useWebSocket.ts
frontend/src/pages/: Editor.tsx  Home.tsx  NotFound.tsx  Settings.tsx
frontend/src/services/: api.ts  ws.ts
frontend/src/styles/: index.css
frontend/src/test/: setup.ts
