[tool.poetry]
name = "steam-theme-studio"
version = "0.1.0"
description = "A visual tool for creating and managing Steam client themes"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.105.0"
uvicorn = "^0.24.0"
python-multipart = "^0.0.6"
websockets = "^12.0"
sqlalchemy = "^2.0.23"
aiosqlite = "^0.19.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
watchfiles = "^0.21.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.2"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi-line-output = 3 